Primeira versão de Dockerfile e docker-compose.yml

--- a/src/main/resources/templates/restaurante.html
+++ b/src/main/resources/templates/restaurante.html
@@ -20,7 +20,7 @@
 
 					<div>
 						<label for="nome">Nome</label> <input type="text"
-							th:field="*{descricao}" value="feijoada" class="form-control" />
+							th:field="*{nome}" value="feijoada" class="form-control" />
 					</div>
 
 					<div>
