--- a/src/main/resources/templates/base.html
+++ b/src/main/resources/templates/base.html
@@ -1,6 +1,6 @@
 <head th:fragment="head">
 <meta charset="UTF-8">
-<title>titulo do modelo</title>
+<title>FeijoadaWeek</title>
 
 <!-- CSS only -->
 <link
@@ -29,8 +29,8 @@
 			<div class="collapse navbar-collapse" id="navbarSupportedContent">
 				<ul class="navbar-nav me-auto mb-2 mb-lg-0">
 					<li class="nav-item"><a class="nav-link active"
-						aria-current="page" href="/restaurantes">Home</a></li>
-					<li class="nav-item"><a class="nav-link" href="#">Link</a></li>
+						aria-current="page" href="/restaurantes">Restaurantes</a></li>
+					<li class="nav-item"><a class="nav-link active" href="/cervejas">Cervejas</a></li>
 					<li class="nav-item dropdown"><a
 						class="nav-link dropdown-toggle" href="#" id="navbarDropdown"
 						role="button" data-bs-toggle="dropdown" aria-expanded="false">
