Pequenos ajustes de HTML usando mais bootstrap.

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -20,17 +20,17 @@
 </head>
 <body>
 
-	<header><h1>FeijoadaWeek Admin</h1></header>
+	<header><h1 class="text-center p-5">FeijoadaWeek Admin</h1></header>
 
 	<div class="container">
 
 		<div class="card mb-3">
-			<a class="card-link" href="/login">Acessar admin</a>
+			<a class="card-link text-center p-5" href="/login" >Acessar admin</a>
 		</div>
 
 	</div>
 
-	<footer>FeijoadaWeek. Desde 2019.</footer>
+	<footer class="text-center p-5">FeijoadaWeek. Desde 2019.</footer>
 
 </body>
 </html>
