--- a/src/main/resources/templates/restaurantes.html
+++ b/src/main/resources/templates/restaurantes.html
@@ -16,17 +16,20 @@
 				<div class="card-title">Novo restaurante</div>
 				<div class="card-body">
 
-					<div>
-						<label for="nome">Nome</label> <input type="text" name="nome"
-							id="nome">
+					<div class="mb-3">
+						<label for="nome" class="form-label">Nome</label> 
+						<input type="text" name="nome"
+							id="nome" class="form-control">
 					</div>
 
-					<div>
-						<label for="slug">slug</label> <input type="text" name="slug"
-							id="slug">
+					<div class="mb-3">
+						<label for="slug" class="form-label">slug</label> <input type="text" name="slug"
+							id="slug" class="form-control">
 					</div>
 
-					<button type="submit">Cadastrar</button>
+					<div class="mb-3">
+					<button type="submit" class="btn btn-primary">Cadastrar</button>
+					</div>
 				</div>
 			</div>
 		</form>
