--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>FeijoadaWeek</title>
+<title>FeijoadaWeek Admin 2022</title>
 
 <!-- CSS only -->
 <link
